<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Jazeit</string>
    <string name="action_settings">Settings</string>
    <string name="menu_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="txt_name">Name</string>
    <string name="Settings">Settings</string>
    <string name="Change_pwd">Change Password</string>
    <string name="txt_uname">Username</string>
    <string name="Error">Error</string>
    <string name="Upload">Change Password</string>
    <string name="Complete">Complete</string>
    <string name="Forgot_pwd">Forgot Password</string>
    <string name="Upload_pic">Upload</string>

    <string name="txt_pass">Email</string>
    <string name="txt_pass1">Password</string>
    <string name="txt_done">Done</string>
    <string name="txt_back">Back</string>
    <string name="txt_signup">SignUp</string>
    <string name="txt_chose">Choose</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="txt_go">Go</string>
    <string name="txt_log">Log In</string>
    <string name="txt_fb">Facebook</string>
    <string name="txt_fb1">Log In With Facebook</string>
    <string name="txt_twit">Log In With Twitter</string>
    <string name="txt_or">or</string>
    <string name="not_allow">Don\'t Allow</string>
    <string name="choose_app">Choose Crop App</string>
    <string name="txt_email">Email</string>
    <string name="txt_pas">Password</string>
    <string name="old_pwd">Old Password</string>
    <string name="new_pwd">New Password</string>
    <string name="conf_pwd">Confirm Password</string>
    <string name="title_activity_search">SearchActivity</string>
    <string name="title_activity_search_list">SearchList</string>
    <string name="title_activity_search_page">SearchPage</string>
    <string name="title_activity_grid_service">GridServiceActivity</string>
    <string name="et_txt">Search</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="txt_rating">RATING</string>
    <string name="access_photo">JazeIt Would Like To Access Your Photos.</string>
    <drawable name="white">#ffffff</drawable>
    <drawable name="black">#000000</drawable>
    <drawable name="green">#347C2C</drawable>
    <drawable name="pink">#FF00FF</drawable>
    <drawable name="violet">#a020f0</drawable>
    <drawable name="grey">#778899</drawable>
    <drawable name="red">#C11B17</drawable>
    <drawable name="yellow">#FFFF8C</drawable>
    <drawable name="PowderBlue">#b0e0e6</drawable>
    <drawable name="brown">#2F1700</drawable>
    <drawable name="Hotpink">#7D2252</drawable>
    <drawable name="orange">#FFA500</drawable>
    <string name="title_activity_practice">PracticeActivity</string>
    <string name="txt_service">SERVICES</string>
    <string name="txt_product">PRODUCTS</string>
    <string name="txt_produts">PRODUCTS</string>
    <string name="title_activity_about">AboutActivity</string>
    <string name="save">GET IN TOUCH</string>
    <string name="header">\u2022 Who is making the product?\n\u2022 What inspired creating the product?
	 \n\u2022What obstacles did you need to overcome to develop the product? \n
</string>
    <string name="facebook_app_id">501649123346702</string>
    <string name="btn_logout_from_google">Logout from Google</string>
    <string name="btn_revoke_access">Revoke Access</string>
    <string name="image">Image</string>

    <!--<string name="product">Products</string>
    <string name="Service">Service</string>
    <string name="city">City Info</string>-->
    <string name="company">Lirios Do Mar</string>
    <string name="contact">CONTACT INFO</string>
    <string name="mail">E-MAIL</string>
    <string name="Address">ADDRESS</string>
    <string name="web">WEBSITE</string>
    <string name="phone">+7183841441</string>
    <string name="Email">hardrockdesign@gmail.com</string>
    <string name="Website">hardrockdesign.com</string>
    <string name="addrtext">81 Broadway, Brooklyn,NY\n11249, United States</string>
    <string name="companyText">When your web visitors are unsure about which product to purchase, they look for suggestions what to buy. Theyâ€™re often swayed to buy a product with the highest number of positive reviews. But there are other ways to sneak social proof into your product descriptions.</string>
    <string name="txt_ratings">RATINGS</string>
    <string name="txt_followers">Followers</string>
    <string name="txt_following">Following</string>
    <string name="txt_likes">Likes</string>
    <string name="txt_180">180</string>
    <string name="txt_340">340</string>
    <string name="txt_1500">1500</string>
    <string name="txt_services">SERVICES</string>
    <string name="txt_servicetext">Proin Maximus ut metus eget consactetar.Nullam varius erat quis vehicula ultricles.vivamus quis leo erat</string>
    <string name="txt_follow">FOLLOW</string>
    <string name="txt_message">MESSAGE</string>
    <string name="txt_phone">Phone</string>

    <string name="txt_home">Home</string>
    <string name="txt_profile">Profile</string>
    <string name="txt_profile1">Profile</string>
    <string name="txt_setting">Settings</string>
    <string name="txt_terms">Accept Terms And Conditions</string>
    <string name="txt_forgotpass">Forgot Your Password?</string>
    <string name="autotxt_searchbox">Search Anything Anytime</string>
    <string name="txt_signin">SignIn</string>

    <string name="OK_btn">OK</string>
    <string name="photo_library">Photo Library</string>
    <string name="camera">Camera</string>
    <string name="cancel">Cancel</string>
    <string name="select_source">Select Source</string>
    <string name="My_page">My page</string>
    <string name="Company_page">Company page</string>
    <string name="Account_setimg">Account setting</string>
    <string name="Logout">Logout</string>
    <string name="exit">Cancel</string>


<!-- Alert -->
    <string name  = "Email_not_valid">Email address not valid.</string>
    <string name  = "All_field_blank">All fields are Blank. Please fill this fields</string>
    <string name  = "Email_not_match">Email and Password not match.</string>
    <string name  = "Server_not_reachable">Server not reachable please check your internet connection</string>
    <string name  = "Name_is_Empty">Name is empty. Please enter your name ..</string>
    <string name  = "Username_is_Empty">UserName is empty. Please enter user name..</string>
    <string name  = "User_already_exists">User already exists. Please try anather one..</string>
    <string name  = "Invalid_creadential">Invalid credential. Please try again..</string>
    <string name  = "User_create">User Create. Please check your email.</string>
    <string name  = "Password_is_Empty">Please enter the your password ..</string>
    <string name  = "Password_is_Match">Username and Password do not match please try again later..</string>
    <string name  = "Password_is_change">Password change successfully</string>
    <string name  = "User_not_Creted">User not registered yet..please register..</string>
    <string name="title_activity_search_catagory">Search_catagory</string>
    <string name="title_activity_two_layout">TwoLayout</string>
    <string name="title_activity_main_second">Main_second</string>
    <string name="title_activity_profile_">Profile_Activity</string>
    <string name="title_activity_first_screen">First_screen</string>
    <string name="title_activity_second">second</string>
    <string name="title_activity_trial">Trial</string>
    <string name="Autocomplete_Textview">Search anything. Anytime</string>
    <string name="SERVICES">SERVICES</string>
    <string name="PRODUCTS">PRODUCTS</string>
    <string name="CITYINFO">CITYINFO</string>
    <string name="title_activity_sub_catagories">SubCatagories</string>
    <string-array name="list">
        <item>Item 1</item>
        <item>Item 2</item>
        <item>Item 3</item>
        <item>Item 4</item>
        <item>Item 5</item>
    </string-array>
    <string name="title_activity_product_listing">Product_listing</string>
    <string name="title_activity_home_activity">Home_activity</string>
    <string name="title_activity_app__setting">App_Setting</string>
    <string name="title_activity_change__password">Change_Password</string>
    <string name="title_activity_select_country">Select_country</string>
    <string name="title_activity_forgot__password_">Forgot_Password_Activity</string>
    <string name="_forgot__password_Message">JazeIt will send password reset instruction to the Email address associated with your account</string>
    <string name="title_activity_user_profile">User_profile</string>
///User Profile

    <string name = "My_Profile">MY PROFILE</string>
    <string name = "User_info">Info</string>
    <string name = "User_msg">Message</string>
//Company profile
    <string name = "company_profile">COMPANY PROFILE</string>
    <string name = "company_keywords">Keywords</string>
    <string name = "company_listing_image">Listing Image</string>
    <string name = "company_payment">Payment</string>
//User menu
    <string name = "normal_member">Normal \n Member</string>
    <string name = "broze">Bronze</string>
    <string name = "silver">Silver</string>
    <string name = "reviews">Reviews</string>
//User Information
    <string name = "User_infomation">USER INFORMATION</string>
    <string name = "et_name">Name</string>
    <string name = "et_occupation">Occupation</string>
    <string name = "et_telephoen">Telephone</string>
    <string name = "et_mobile">Mobile</string>
    <string name = "et_address">Address</string>
    <string name = "btn_save">SAVE</string>
    <string name="title_activity_profilepicture">Profilepicture</string>


</resources>