<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context="com.jazeit.jazeitapp.Change_Password">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/Header_part"
        android:background="@drawable/action_bar_bg"
        >

        <ImageButton
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:id="@+id/imageButton"
            android:background="@null"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:src="@drawable/abc_ic_ab_back_mtrl_am_alpha" />

        <TextView android:text="@string/Change_pwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/catagories"
            android:textStyle="bold"
            android:textSize="20dp"
            android:textColor="@color/white"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginLeft="65dp"
            android:layout_marginStart="65dp" />


    </RelativeLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="280dp"
        android:layout_height="50dp"
        android:background="@drawable/textinputborder"
        android:id="@+id/first"
        android:layout_below="@+id/Header_part"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="23dp">

        <EditText
            android:id="@+id/old_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:paddingLeft="10dp"
            android:hint="@string/old_pwd"
            android:inputType="textPassword"
            android:singleLine="true"><requestFocus /></EditText>

    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:layout_width="280dp"
        android:layout_height="50dp"
        android:background="@drawable/textinputborder"
        android:id="@+id/new_pwd"
        android:layout_below="@+id/first"
        android:layout_marginTop="20dp"
        android:layout_alignLeft="@+id/first"
        android:layout_alignStart="@+id/first">

        <EditText
            android:id="@+id/et_new_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:paddingLeft="10dp"
            android:inputType="textPassword"
            android:hint="@string/new_pwd"
            android:singleLine="true"></EditText>

    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:layout_width="280dp"
        android:layout_height="50dp"
        android:background="@drawable/textinputborder"
        android:id="@+id/conf_pwd"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/new_pwd"
        android:layout_alignLeft="@+id/new_pwd"
        android:layout_alignStart="@+id/new_pwd">

        <EditText
            android:id="@+id/et_conf_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:paddingLeft="10dp"
            android:inputType="textPassword"
            android:hint="@string/conf_pwd"
            android:singleLine="true"></EditText>

    </android.support.design.widget.TextInputLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text=""
        android:layout_marginTop="20dp"
        android:id="@+id/txt_message"
        android:textColor="@color/cpb_red"
        android:visibility="gone"
        android:layout_below="@+id/conf_pwd"
        android:layout_centerHorizontal="true" />
    <com.jazeit.jazeitapp.dd.CircularProgressButton
        android:id="@+id/circularButton1"
        android:layout_width="196dp"
        android:layout_height="64dp"
        android:textColor="@color/cpb_white"
        android:textSize="18sp"
        app:cpb_cornerRadius="48dp"
        app:cpb_textComplete="@string/Complete"
        app:cpb_textError="@string/Error"
        app:cpb_textIdle="@string/Upload"
        android:layout_marginTop="20dp"
        app:cpb_iconComplete="@drawable/ic_action_accept"
        app:cpb_selectorIdle="@drawable/idle_state_selector"
        app:cpb_selectorComplete="@drawable/complete_state_selector"
        app:cpb_selectorError="@drawable/error_state_selector"
        android:layout_below="@+id/txt_message"
        android:layout_centerHorizontal="true" />
    <com.jazeit.jazeitapp.dd.CircularProgressButton
        android:id="@+id/circularButton2"
        android:layout_width="196dp"
        android:layout_height="64dp"
        android:textColor="@color/cpb_white"
        android:textSize="18sp"
        app:cpb_textComplete="@string/cancel"
        app:cpb_textError="@string/Error"
        app:cpb_textIdle="@string/cancel"
        android:layout_below="@+id/circularButton1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp" />


</RelativeLayout>
