<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.jazeit.jazeitapp.Forgot_Password_Activity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/Header_part"
        android:background="@drawable/action_bar_bg"
        >

        <ImageButton
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:id="@+id/imageButton"
            android:background="@null"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:src="@drawable/abc_ic_ab_back_mtrl_am_alpha" />

        <TextView android:text="@string/Forgot_pwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/catagories"
            android:textStyle="bold"
            android:textSize="20dp"
            android:textColor="@color/white"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginLeft="65dp"
            android:layout_marginStart="65dp" />


    </RelativeLayout>
    <android.support.design.widget.TextInputLayout
        android:layout_width="280dp"
        android:layout_height="50dp"
        android:id="@+id/second"
        android:gravity="center"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:background="@drawable/textinputborder"
        android:layout_below="@+id/Header_part"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="54dp">

        <EditText
            android:id="@+id/et_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:paddingLeft="10dp"
            android:hint="@string/txt_email"
            android:singleLine="true"/>
    </android.support.design.widget.TextInputLayout>
    <com.jazeit.jazeitapp.dd.CircularProgressButton
        android:id="@+id/circularButton1"
        android:layout_width="196dp"
        android:layout_height="64dp"
        android:textColor="@color/cpb_white"
        android:textSize="18sp"
        app:cpb_cornerRadius="48dp"
        app:cpb_textComplete="@string/Complete"
        app:cpb_textError="@string/Error"
        app:cpb_textIdle="@string/Forgot_pwd"
        android:layout_marginTop="20dp"
        app:cpb_iconComplete="@drawable/ic_action_accept"
        app:cpb_selectorIdle="@drawable/idle_state_selector"
        app:cpb_selectorComplete="@drawable/complete_state_selector"
        app:cpb_selectorError="@drawable/error_state_selector"
        android:layout_below="@+id/second"
        android:layout_centerHorizontal="true" />
</RelativeLayout>
